--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -2,11 +2,11 @@
 
 // Config vars
 // Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
-$kaldi-red-invert: #fff
+$asp-primary: #D64000
+$asp-mint-invert: #F0F7F4
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
+$primary: $asp-primary
+$primary-invert: $asp-red-invert
 $body-color: #333
 $black: #2b2523
 
