Commit Theme work

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -6,7 +6,7 @@ $asp-primary: #D64000
 $asp-mint-invert: #F0F7F4
 
 $primary: $asp-primary
-$primary-invert: $asp-red-invert
+$primary-invert: $asp-mint-invert
 $body-color: #333
 $black: #2b2523
 
