--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -3,7 +3,7 @@
 // Config vars
 // Kaldi logo brand color: #FD461E
 $asp-primary: #D64000
-$asp-mint-invert: #F0F7F4
+$asp-mint-invert: #5ABCB9
 
 $primary: $asp-primary
 $primary-invert: $asp-mint-invert
@@ -61,9 +61,9 @@ $black: #2b2523
     border-radius: .25rem
     text-decoration: none
     font-weight: 700
-    color: #F0F7F4
+    color: #5ABCB9
     text-align: center
-    -webkit-box-shadow: inset 0 0 0 2px #F0F7F4
+    -webkit-box-shadow: inset 0 0 0 2px #5ABCB9
     box-shadow: inset 0 0 0 2px #f40
     -webkit-transition: all .15s ease
     transition: all .15s ease
