Change BG theme

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -2,7 +2,7 @@
 
 // Config vars
 // Kaldi logo brand color: #FD461E
-$asp-primary: #D64000
+$asp-primary: #26532B
 $asp-mint-invert: #5ABCB9
 
 $primary: $asp-primary
