--- a/src/components/all.css
+++ b/src/components/all.css
@@ -1,7 +1,7 @@
   .background {
     width: 100vw;
     height: 100vh;
-    background: #222;
+    background: #12100E;
     overflow: hidden;
     position: relative;
   }
@@ -54,7 +54,7 @@
     box-shadow: -40vmin 0 11.0083131631vmin currentColor;
   }
   .background span:nth-child(5) {
-    color: #583C87;
+    color: #3716b1;
     top: 64%;
     left: 28%;
     animation-duration: 15.5s;
@@ -63,7 +63,7 @@
     box-shadow: 40vmin 0 6.5592065533vmin currentColor;
   }
   .background span:nth-child(6) {
-    color: #FFACAC;
+    color: #5e1958;
     top: 1%;
     left: 48%;
     animation-duration: 12.1s;
@@ -72,7 +72,7 @@
     box-shadow: 40vmin 0 11.4780311642vmin currentColor;
   }
   .background span:nth-child(7) {
-    color: #E45A84;
+    color: #1e9787;
     top: 98%;
     left: 33%;
     animation-duration: 14.7s;
@@ -81,7 +81,7 @@
     box-shadow: 40vmin 0 14.9660736829vmin currentColor;
   }
   .background span:nth-child(8) {
-    color: #E45A84;
+    color: #67831a;
     top: 97%;
     left: 65%;
     animation-duration: 14.7s;
@@ -90,7 +90,7 @@
     box-shadow: 40vmin 0 5.5676280881vmin currentColor;
   }
   .background span:nth-child(9) {
-    color: #583C87;
+    color: #507a4f;
     top: 27%;
     left: 45%;
     animation-duration: 12.9s;
@@ -108,7 +108,7 @@
     box-shadow: 40vmin 0 7.9479431012vmin currentColor;
   }
   .background span:nth-child(11) {
-    color: #FFACAC;
+    color: #4b1dca;
     top: 92%;
     left: 28%;
     animation-duration: 12.1s;
@@ -117,7 +117,7 @@
     box-shadow: 40vmin 0 5.4116678167vmin currentColor;
   }
   .background span:nth-child(12) {
-    color: #583C87;
+    color: #9c248c;
     top: 18%;
     left: 89%;
     animation-duration: 15.5s;
@@ -126,7 +126,7 @@
     box-shadow: 40vmin 0 7.5529546114vmin currentColor;
   }
   .background span:nth-child(13) {
-    color: #FFACAC;
+    color: #acfff4;
     top: 61%;
     left: 8%;
     animation-duration: 11.4s;
@@ -153,7 +153,7 @@
     box-shadow: -40vmin 0 14.7394489588vmin currentColor;
   }
   .background span:nth-child(16) {
-    color: #E45A84;
+    color: #23696e;
     top: 47%;
     left: 93%;
     animation-duration: 11.9s;
@@ -162,7 +162,7 @@
     box-shadow: -40vmin 0 11.4277657894vmin currentColor;
   }
   .background span:nth-child(17) {
-    color: #E45A84;
+    color: #55338d69;
     top: 21%;
     left: 35%;
     animation-duration: 13.2s;
@@ -180,7 +180,7 @@
     box-shadow: 40vmin 0 8.6381798108vmin currentColor;
   }
   .background span:nth-child(19) {
-    color: #FFACAC;
+    color: #0b703d;
     top: 26%;
     left: 14%;
     animation-duration: 10.9s;
@@ -189,7 +189,7 @@
     box-shadow: 40vmin 0 12.4018384946vmin currentColor;
   }
   .background span:nth-child(20) {
-    color: #583C87;
+    color: #8d691b;
     top: 81%;
     left: 60%;
     animation-duration: 10.1s;
